# fmp3_raspberrypi_pico_cmake

./: .gitignore  CMakeLists.txt  README.md
fmp3/: CMakeLists.txt  README.txt  configure.rb  fmp3.cmake
fmp3/arch/arm_m_gcc/common/: core_kernel.trb  core_kernel_impl.c  core_kernel_impl.h  core_kernel_impl_v6m.h  core_kernel_v6m.trb  core_support.S  core_support_v6m.S
fmp3/arch/arm_m_gcc/rp2040/: Makefile.chip  arch.cmake  chip_ipi.c  chip_ipi.cfg  chip_ipi.h  chip_sil.h  toolchain.cmake
fmp3/arch/gcc/: toolchain.cmake
fmp3/arch/tracelog/: trace_dump.c  trace_log.c
fmp3/cfg/: cfg.rb  pass1.rb  pass2.rb
fmp3/doc/: configurator.txt  fmp_spec.txt  porting.txt  user.txt  version.txt
fmp3/include/: kernel.h  kernel_fncode.h  sil.h
fmp3/kernel/: Makefile.kernel  check.h  exception.c  exception.h  exception.trb  interrupt.c  interrupt.h  interrupt.trb  kernel.trb  kernel_check.trb  kernel_impl.h  kernel_rename.def  kernel_sym.def  mempfix.c  mempfix.h  mutex.c  mutex.h  mutex.trb  pcb.h  semaphore.c  startup.c  task.c  task.h  task_manage.c  task_refer.c  taskhook.c  taskhook.h
fmp3/sample/: sample1.c  sample1.cfg
fmp3/syssvc/: banner.c  serial.c  serial.h  serial_cfg.c
fmp3/test/: test_mtrans2.c  test_subprio1.c  test_subprio1.cfg  test_subprio2.c  test_subprio2.cfg  test_subprio3.cfg  testexec.rb
fmp3/utils/: applyrename.rb  gentest.rb  makerelease.rb  uf2conv.rb
